完成客户端的商品发布，并将商品与商家的关系构建完成。